--- a/app/css/additional-styles/theme.css
+++ b/app/css/additional-styles/theme.css
@@ -20,7 +20,7 @@
 
 .hamburger.active svg>*:nth-child(1) {
     opacity: 0;
-    y: 11;
+    y: 11px;
     transform: rotate(225deg);
     transition: y 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1), opacity 0.1s 0.12s ease-out;
 }
@@ -31,7 +31,7 @@
 }
 
 .hamburger.active svg>*:nth-child(3) {
-    y: 11;
+    y: 11px;
     transform: rotate(135deg);
     transition: y 0.1s ease-out, transform 0.22s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1), width 0.1s ease-out;
 }
